public/global.css
html,
body {
  position: relative;
  width: 100%;
  height: 100%;
  /* background-color: rgb(26, 26, 26); */
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  color: #333;
  margin: 0;
  padding: 8px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
    'Helvetica Neue', sans-serif;
}

input,
button,
select,
textarea {
  font-family: inherit;
  font-size: inherit;
  padding: 0.2em;
  margin: 0 0 0.5em 0;
  border: 1px solid #ccc;
  border-radius: 2px;
}
button:focus {
  border-color: #666;
}

